[package]
name = "virima-remote-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Registry",
    "Win32_System_EventLog",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dashmap = "5.5"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4"] }
bytes = "1.5"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"

